--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI for comp 2156 Lab Exercises
+name: CI for COMP 2156 Lab Exercises
 
 # Controls when the workflow will run
 on:
@@ -25,22 +25,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
-        # Install nodeJs
+      # Install nodeJs
       - name: Use Node.js
         uses: actions/setup-node@v2
         with: 
-          node-version: "14.x"
-
-      # Install project dependencies
-      - name: Install dependencies
-        run: npm install
+          node-version: "18.x"
+          cache: 'npm'
+      - run: npm install
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+      
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
